--- a/server/src/assets/simular_descarte.css
+++ b/server/src/assets/simular_descarte.css
@@ -1,5 +1,9 @@
+.app-main {
+	padding: 0 5%;
+}
+
 .simular-conteudo {
-	padding: 2rem 2rem 4rem;
+	padding: 2rem 0 4rem;
 	display: grid;
 	gap: 1.5rem;
 }
